--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BIO1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" /> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
     <script src="main.js"></script>
 </head>
 
@@ -49,7 +49,7 @@
            work through issues from the end customer perspective.
         </p>
         
-        <p>I have 2 dogs, 2 cats, and 2 horses. I have a menagerie of black and white animals. Crazy cat lady if you will.
+        <p>I have 2 dogs, 2 cats, and 2 horses. Basically a menagerie of black and white animals. Crazy cat lady if you will.
             I'm deathly allergic to all animals with fur; however, I take a handful of pills in the morning so I can survive
             the day filled with shedding fur and doggy kisses.
         </p>
